--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "discord.js": "^14.1.2",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
+    "node-fetch": "^2.7.0",
     "openai": "^4.16.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^8.21.0"
