--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "@img/sharp-win32-x64": "^0.33.2",
+    "@langchain/anthropic": "^0.1.3",
     "@langchain/google-genai": "^0.0.10",
     "@langchain/openai": "^0.0.15",
     "chatgpt": "^2.0.6",
