--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "type": "module",
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
-    "@img/sharp-win32-x64": "^0.33.2",
     "@langchain/anthropic": "^0.1.3",
+    "@langchain/community": "^0.3.17",
     "@langchain/google-genai": "^0.0.10",
     "@langchain/openai": "^0.0.15",
     "chatgpt": "^2.0.6",
     "discord.js": "^14.14.1",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
-    "langchain": "^0.1.25",
+    "langchain": "^0.3.6",
     "node-fetch": "^2.7.0",
     "openai": "^4.16.1",
     "pdf-parse": "^1.1.1",
